implemented fixes based on code review feedback